--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
     <nav class="nav-menu">
       <ul>
-        <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>	
+        <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>        
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+		<li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>	
 		<li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <!-- <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
       </ul>
@@ -60,52 +60,21 @@
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>A LITTLE ABOUT MYSELF</h2>
-          <p class ="justified">
-		  I am Anirudh Nagraj, a keen eyed UX guy. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product. </p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/Personal/Main Image 2.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3> What sets me apart?</h3>
-            <p class="justified">
-              By leveraging user research techniques to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the value of the product at hand. Through strategizing and working on the insights generated, I am sure that the users will have a positive user experience. Having worked in software development in UI/UX, I know what it means to wear the developers hat while designing a product. One can say that without user research, a product can be developed. But,a good product needs user research before development. For me, user research is not something that comes before designing. It is quintessential in every step of the product life cycle. Data tells me the numbers but they often don't tell me the reason.  Methods like interviews tell me the reason, but they don't project the numbers. I prefer working with both. 
-            </p>
-			
-            <h3> Other Interests</h3>
-			<p class="justified">I am an avid soccer fan, coffee lover and an admirer of nature. When idle, books offer a place of solace for me.  Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time.
-			</p>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End About Section -->
-
-
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+	 <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
 	  
 	  <div class="section-title">
           <h2>Projects</h2>
-          <p>My work focuses on employing user research in projects that involve the element of accessibility too. </b> View some of my work below.</p>
+          <p></b> View some of my projects below.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Accessibility</li>
-              <li data-filter=".filter-card">Mobile and Web</li>
+              <li class ="hover" data-filter="*" class="filter-active">All</li>
+              <li class ="hover"  data-filter=".filter-app">Accessibility</li>
+              <li class ="hover"  data-filter=".filter-card">Mobile and Web</li>
               <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
@@ -220,6 +189,39 @@
 	</div>
 	</div>
 	</section>
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>A LITTLE ABOUT MYSELF</h2>
+          <p class ="justified">
+		  I am Anirudh Nagraj, a keen eyed UX guy. I use a mixed-methods approach to ensure that both customers and businesses get the most out of a product. </p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/Personal/Main Image 2.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3> What sets me apart?</h3>
+            <p class="justified">
+              By leveraging user research techniques to get into the minds of the users businesses serve, I help identify the needs of the clients, stakeholders (users) and look to increase the product's value at hand. Through strategizing and working on the insights generated, I am sure that the users will have a positive user experience. Having worked in software development in UI/UX, I know what it means to wear the developer's hat while designing a product. Many people might argue, a good product needs user research before development. For me, user research is not something that comes before designing. It is quintessential in every step of the product life cycle. Data tells me the numbers, but they often don't tell me the reason.  Methods like interviews tell me the cause, but they don't project the numbers. I prefer working with both. 
+            </p>
+			
+            <h3> Other Interests</h3>
+			<p class="justified">I am an avid soccer fan, coffee lover and an admirer of nature. When idle, books offer a place of solace for me.  Apart from that, I try traveling whenever possible because I love meeting new people, learning about different cultures and being my best self, one day at a time.
+			</p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
+
+
+    <!-- ======= Portfolio Section ======= -->
+   
 	 <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
