--- a/mobileapp.html
+++ b/mobileapp.html
@@ -80,7 +80,7 @@
         <div class="section-title">
           <h2>Overview</h2>
           <p class="justified text-aria">
-		  As a diversion from my thesis, I decided to do a personal project to come up with an application for individuals who are blind when it comes to navigation.
+		  As a diversion from my thesis, I decided to do a personal project to come up with an application for individuals who are blind when it comes to navigation and aid them in navigating from one place to another.
         </div>
 
         <div class="row">
@@ -104,9 +104,7 @@
 		  <div class="container content">
 		  <h3>My Role</h3>
 		  <p class="justified text-aria"> UX researcher and UX designer</p>
-		  <h3>Goals</h3>
-            <p class="justified text-aria">
-              I successfully built a prototype using integrating voice interactions on Adobe XD. I emplyed generative research helped me understand the exisiting pain-points, the opportunities and the possible solutions for the prototype.
+		  ctions on Adobe XD. I emplyed generative research helped me understand the exisiting pain-points, the opportunities and the possible solutions for the prototype.
 			  </div>
         </div>
       </div>
