--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -94,34 +94,26 @@
         <div class="section-title">
           <h2>Overview</h2>
           <p class="justified text-aria">
-		  As a research assistant at the university, I worked on this project to develop a prototype for runners who are blind. This was done in collaboration with another university and a large automobile manufacturer as part of the <b>Mobility for All</b> project. Currently, we are evaluating the prototype created.</p>
+		  As a research assistant at the university, I worked on this project to develop a prototype for runners who are blind. This was done in collaboration with another university and a large automobile manufacturer as part of the <b>Mobility for All</b> project. Currently, we are evaluating the prototype created.<b>TRIDENT</b> stands for Tri-Positional Detection and Navigational Technology. The key features of the system include enhanced awareness of surroundings, detection of obstacles above and below the waist, modes for long and short range detection and choice of output. These features have been determined from interviews conducted with blind joggers and runners. </p>
         </div>
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/Personal/prototype2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Personal/prototype2.jpg" class="avatar4" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p class="justified"><ul>
               <li><strong>Categories</strong>: Accessibility, Wearable Technology, User-Centered Design</li>
               <li><strong>User Base</strong>: Runners who are blind</li>
               <li><strong>Project Timeline</strong>: 2020 - Present</li>
-              <li><strong>Team Members</strong>: 4 students and 1 faculty </a></li>
-			  
+              <li><strong>Team Members</strong>: 4 students (Anirudh Nagraj, Tristan King, Apoorva Bendigeri, Mei Lian Vader) and 1 faculty (Dr.Ravi Kuber)</li>
+			  <li><strong>Research Methods Used</strong>: Literature Reviews, Interviews, Affinity Mapping, Scenario Development, Competitive Analysis</a></li>
             </ul>
-			</p>
-			<h3> About the Prototype</h3>
-            <p class="justified">
-              <b>TRIDENT</b> stands for Tri-Positional Detection and Navigational Technology. The key features of the system include enhanced awareness of surroundings, detection of obstacles above and below the waist, modes for long and short range detection and choice of output. These features have been determined from interviews conducted with blind joggers and runners.
-            </p>
           </div>
 		  <div class="container content">
 		  <h3>My Role</h3>
-		  <p class="justified text-aria"> As the main user researcher and one of two people who built the device, I successfully built a prototype using the insights and data I collected from generative research conducted initially.  </p>
-		  <h3>Goals</h3>
-            <p class="justified text-aria">
-              Dealing with a niche audience made us go beyond the normal research and look in depth for solutions more than one. The end goal? Building an effective and efficient prototype that the users can wear while running. Qualitative research enabled us to look at the major pain-points, build a user-friendly device that enables the runner to avoid obstacles in their path.
-			  </div>
+		  <p class="justified text-aria"> As the lead user researcher, I successfully helped build a prototype using the insights and data I collected from generative research conducted.  </p>
+           </div>
         </div>
       </div>
     </section>
