--- a/coeit-research.html
+++ b/coeit-research.html
@@ -55,7 +55,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="navigational-aid.html">Trident</a>
-          <a class="dropdown-item" href="coeit-ssc.html">COEIT SSC</a>
+          <a class="dropdown-item" href="coeit-ssc.html">Shared Services Center</a>
 		  <a class="dropdown-item" href="mobileapp.html">B-AID</a>
         </div>
       </li>
