--- a/mobileapp.html
+++ b/mobileapp.html
@@ -56,7 +56,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="navigational-aid.html">Trident</a>
           <a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
-          <a class="dropdown-item" href="coeit-ssc.html">COEIT SSC</a>
+          <a class="dropdown-item" href="coeit-ssc.html">Shared Services Center</a>
         </div>
       </li>
 	   <li class="nav-item active">
