--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -243,7 +243,7 @@
 		  
 		  <p class="justified text-aria"> In the first phase of the project, the team collected several works that related to the devlopment of prototypes for individuals who are blind. This rigorous search helped the team to understand the development from other researchers perspective.</span></p>
 		  <figure>
-		  <img src="assets/img/Personal/LiteratureSurvey.png" class="avatar9" alt="">  
+		  <img src="assets/img/Personal/Literature Survey.png" class="img-fluid" alt="">  
 		  <figcaption align="center"><i>Literature Survey</i></figcaption>
 		  </figure>
 		  </br>
