--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -114,12 +114,11 @@
 		  <p class="justified text-aria"> As the lead user researcher, I successfully helped build a prototype using the insights and data I collected from generative research conducted. </p>
           
 			<h3 class="header-aria">Impact</h2>
-		  	<p class="justified">
-			<span class = "text-aria"> This low cost device consists of a variety of sensors to offer a wider detection range. The output works on haptics and can be used by Deaf and Hard of hearing people as well. The users do not have to spend money on devices that are expensive and bear only one sensor as this prototype is a handy alternative.  We anticipate that people in Low-and Middle income countries would be able to afford the device should it hit the market. </p>
-			<p class="text-aria"> This device can be used for regular walking as well, extending from the runners. </p>
-			<p class="text-aria"> <b>Almost all</b> of the users who tried this prototype mentioned that they would like to use it for their day to day activities. </p>
-			<p class="text-aria"> <b>All</b> users liked the idea of a non-intrusive belt that can be used to detect obstacles. </p>
-			<p class="text-aria"> <b>Majority</b> of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available. </p>
+		  	<p class="justified text-aria tabspacing">This low cost device consists of a variety of sensors to offer a wider detection range. The output works on haptics and can be used by Deaf and Hard of hearing people as well. The users do not have to spend money on devices that are expensive and bear only one sensor as this prototype is a handy alternative.  We anticipate that people in Low-and Middle income countries would be able to afford the device should it hit the market. </p>
+			<p class="text-aria tabspacing"> This device can be used for regular walking as well, extending from the runners. </p>
+			<p class="text-aria tabspacing"> <b>Almost all</b> of the users who tried this prototype mentioned that they would like to use it for their day to day activities. </p>
+			<p class="text-aria tabspacing"> <b>All</b> users liked the idea of a non-intrusive belt that can be used to detect obstacles. </p>
+			<p class="text-aria tabspacing"> <b>Majority</b> of the users feel that the belt is lightweight and can be used as an alternative to the devices currently available. </p>
 			</span>
           </div>
 		</div>
