--- a/coeit-research.html
+++ b/coeit-research.html
@@ -82,7 +82,7 @@
         <div class="section-title">
           <h2>Overview</h2>
           <p class="justified text-aria">
-		  As a semester project, our client's (College of Engineering and Information Technology - <b>Abbv: COEIT </b>) approached us to conduct research and provide redesigns for the research website.</p>
+		  The COEIT research website was identified by users to be a little gaudy on the eye and have some prevailing issues that make the user shy away from the current website. As a semester project, our client's (College of Engineering and Information Technology - <b>Abbv: COEIT </b>) approached us to conduct research and provide redesigns for the research website.</p>
         </div>
 		
 		 <div class="row">
@@ -94,27 +94,28 @@
               <li class="text-aria"><strong>Categories</strong>: User Research, Website Redesign, User-Centered Design</li>
               <li class="text-aria"><strong>User Base</strong>: Students, Faculty, Researchers.</li>
               <li class="text-aria"><strong>Project Timeline</strong>: January 2020 - May 2020</li>
-              <li class="text-aria"><strong>Team Members</strong>: 2 student team </li>
+              <li class="text-aria"><strong>Team Members</strong>: 2 student team - Hirak Ray and Anirudh Nagraj</li>
+			  <li class="text-aria"><strong>Research Methods</strong>: Contextual Inquiries, One on One interviews, Heuristic Evaluations, Participatory Design, Time on Task,</li>
             </ul> </p>
 			
 			</p>
 			<h3> About the Project</h3>
             <p class="justified text-aria">
-              Research websites are generally verbose. So it must be said that people would like to look through the headlines and then proceed towards the website’s actual content. The COEIT research website was identified by users to be a little gaudy on the eye and have some prevailing issues that make the user shy away from the current website. Hence, we incorporated evaluative research and helped redesign the website for better user retention and increase the average time the users spend on the website.
+                The website serves as an information hub into the various dimensions, ranging from the departments, faculty to the myriad of projects. The COEIT prides itself on the excellent research that is conducted in the labs of the various departments. (For example, the Interactive Systems Research Center (ISRC)), fostering a collaborative environment. Hence, we incorporated evaluative research and helped redesign the website for better user retention and increase the average time the users spend on the website.
             </p>
 		</div>
     <!-- ======= Portfolio Details ======= -->
         <div class="container content">
 		</br>
 		  <h3>My Role</h3>
-		  <p class="justified text-aria"> One of the two user researchers responsible for conducting the qualitative study and help improve the usability of the existing product.  </p>
+		  <p class="justified text-aria"> User researcher responsible for conducting the qualitative study and help improve the usability of the existing product.  </p>
 	<h3 class="header-aria"><b>Impact</b></h2>
 		  <p class="justified">
 			<span class = "text-aria"> We showed that the proposed changes would lead to :</span> </p>
 			<ul>
-				<li><span class= "text-aria tabspacing"> An increase in the number of people visiting the site <b> (Minimum ~30% increase) </b> </span></li>
-				<li><span class= "text-aria tabspacing">Greater user retention <b> (~40% bounce rates) </b> </span></li>
-				<li><span class= "text-aria tabspacing">Efficient navigation throughout the website. <b> (~80% of the participants mentioned that the new prototype was easier to navigate) </b></span></li>
+				<li><span class= "text-aria tabspacing"> An increase in the number of people visiting the site <b> (Minimum ~30% increase). </b> </span></li>
+				<li><span class= "text-aria tabspacing">Greater user retention <b> (~40% bounce rates). </b> </span></li>
+				<li><span class= "text-aria tabspacing">Efficient navigation throughout the website. <b> (~80% of the participants mentioned that the new prototype was easier to navigate). </b></span></li>
 				<li><span class= "text-aria tabspacing"> Better internal structure. </span> </li>
 				
           </div>
@@ -189,10 +190,10 @@
           <h2><b>METHODOLOGY</b></h2>
           </div><p class="justified">
 		  <p class="text-aria">We divided the project by the tasks and allotted a set number of weeks to conduct the research and design tasks.
-			To come up with the redesign, we had to go in depth to understand the painpoints of the users; do some <b>Evaluative research.</b> Starting with competitive analysis and recruiting users for contextual inquiries. </span></p></p>
+			To come up with the redesign, we had to go in depth to understand the painpoints of the users and conduct <b>Evaluative research.</b> Starting with competitive analysis and recruiting users for contextual inquiries. </span></p></p>
 		  <ul class="text-aria">
 			<li>Week 1: Competitive Analysis.</li>
-            <li>Week 2-5: Contextual Inquiries followed by 45 minute context interviews.</li>
+            <li>Week 2-5: Contextual Inquiries followed by 45 minute interviews. Done in this manner so that the researchers could create questions based on the feedback received from the contextual inquiries.</li>
             <li>Week 6: Heuristic Evaluations.</li>
             <li>Week 7: Participatory/ Co-Design sessions.</a></li>
 			<li>Week 8: Persona Creation</li>
@@ -201,7 +202,7 @@
 			<li>Week 17: A/B Testing </li>
 			</ul>
 		
-		<h4 class="uppermargin"><b>Rival Website Analysis</b></h4>
+		<h4 class="uppermargin"><b>Competitive Analysis</b></h4>
 			
 			<p class="justified"><span class="text-aria"> We wanted to know what the other research websites offer. So we diverged and came up with pointers for each of them. </span> </p>
 			<img src="assets/img/Personal/CA2.png" class="avatar9" alt="">
@@ -212,7 +213,7 @@
 			  <blockquote> <i>These campus partners could use more visual hierarchy, like they just have text and the text that is linked is blue and that is what set</i></blockquote>
 			 
 			<h4 class="uppermargin"><b>User Interviews </b></h4>
-			<p class="justified"> <span class = "text-aria"> Three participants were asked to participate in a full interview that was semi-structured.  Specific inputs from the participants enabled us to strengthen the findings and combine the insights obtained from the contextual inquiries. </span> </p>	
+			<p class="justified"> <span class= "text-aria"> Three participants were asked to participate in a full interview that was semi-structured.  Specific inputs from the participants enabled us to strengthen the findings and combine the insights obtained from the contextual inquiries. </span> </p>	
 			
 			  <blockquote> <i>Maybe when you click on Research, this should be the first thing that pops up. This is what UMBC does. This is far more interesting. Every website says that they do cross-disciplinary research. But it is nice to see examples of it, like they do here with this. But they currently have this at the second to last last item in their menu. So....</i></blockquote>
 			  <blockquote> <i>I do notice after looking at the menu on the left that a range of items have appeared which do relate to research centers. They should actually be listed in the main content of the page.</i></blockquote>
@@ -233,7 +234,7 @@
             </div>
 			<h4 class="uppermargin"><b>Personas</b></h4>
 		 <p class="justified">
-            <span class = "introtext">Using the insights and pain points, we created two personas to reflect the key characteristics of our participants, that aided us in developing an understanding of current users and potential users and create the redesigns accordingly. </span> </p>
+            <span class = "text-aria">Using the insights and pain points, we created two personas to reflect the key characteristics of our participants, that aided us in developing an understanding of current users and potential users and create the redesigns accordingly. </span> </p>
 		  <div class ="row">
 		  <div class ="col-md-6">
 		  <img src="assets/img/Personal/Persona1.png" class="avatar7"  alt="">
@@ -244,7 +245,7 @@
           </div>
 		</div>
 		<h5 class="header-aria"><b>PAIN POINTS </b></h5>
-			<ul class="listitems">
+			<ul class="text-aria">
 				<li>Stressed on the lack of contact information for various resources and services listed on the website, which would otherwise promote collaboration. </li>
 				<li>The navigation of the COEIT website involved some frustration and confusion</li>
 				<li>Lack of nesting of information caused frustration.</li><li>Participants were aggravated by the lack of internal consistency within the website, regarding the navigational menu, and navigation within its sub pages.</li>
@@ -256,7 +257,7 @@
 	<section id="insights2">
 	<div class="container">
           <h2><b>INSIGHTS</b></h2>
-			<ul class="listitems">
+			<ul class="listitems text-aria">
 				<li> There may be instances where she feels like there is information overload.</li>
 				<li>Participants look for smoother navigation.</li>
 				<li>Text can be spaced out, brief and more meaningful</li>
@@ -278,7 +279,7 @@
 		  <span class="text-aria">Populating all the insights, we converged and made sketches on paper as a starting point for the redesign and went back to Shendelzare to show our progress.</span></p>
 		  <h6 style="color:blue;"><b>Member Checking</b></h6>
 		  <p class="justified">
-            <span class = "introtext3"> The designed sketches may not have correctly encapsulated our participant’s suggestions. To verify this, we employed <span class ="irqhighlight"><b> MEMBER CHECKING</b> </span> (a technique for exploring the credibility of results. Data or results are returned to participants to check for accuracy and resonance with their experiences) may be used.</span></p>
+            <span class = "text-aria"> The designed sketches may not have correctly encapsulated our participant’s suggestions. To verify this, we employed <span class ="irqhighlight"><b> MEMBER CHECKING</b> </span> (a technique for exploring the credibility of results. Data or results are returned to participants to check for accuracy and resonance with their experiences) may be used.</span></p>
 		 
 		  <div class="row">
 		  <div class="col-md-4"> 
@@ -293,7 +294,7 @@
 		  </div>
 	
 	<h4 class ="uppermargin"><b>Digital Mockups</b></h4>	
-		  <span class="introtext">Shendelzare wanted to see the redesign in a digital format. Hence, we shifted to draw.io and showed her the changes we intended to do.</span></p>
+		  <span class="text-aria">Draw.io was used for the medium fidelity mockups.</span></p>
 		<div class="row">
 		  <div class="col-md-6"> 
 		  <img src="assets/img/Personal/MFC1.jpg" class="avatar8"  alt="">
@@ -303,7 +304,7 @@
 		  </div>
 		 </div>
 	<h4 class ="uppermargin"><b>High Fidelity Mockups</b></h4>	
-		  <span class="introtext">Improving the color, fidelity and showing the overall redesign.</span></p>
+		  <span class="text-aria">Improving the color, fidelity and showing the overall redesign.</span></p>
 		
 		<h6 style="color:blue;"><b>HOME SCREEN</b></h6>
 		<div class="row">
@@ -339,7 +340,7 @@
 	<section id="insights2">
       <div class="container" data-aos="fade-up">
 	  <h2><b>Research Questions Answered</b></h2>
-		<ul class="listitems">
+		<ul class="listitems text-aria">
 				<li>Is the banner of the “College of Engineering and Information Technology” legible?</li>
 				<li>Can users easily identify which page they are currently on?</li>
 				<li>Is the website consistent with UMBC’s theme</li>
