--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           </div>
         </div>
 	
-		  <p align="right"><i>To view the resume as a pdf, please click <a href="assets\img\Personal\Anirudh_Nagraj_Resume.pdf" target="_blank" type="application/pdf">here </i></a>.
+		  <p align="right"><i>To view the resume as a pdf, please click <a href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank" type="application/pdf">here </i></a>.
       </div>
     </section><!-- End Resume Section -->
 
