--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -250,18 +250,22 @@
 		  </figure>
 		  </br>
 		  <h4 class="uppermargin"><b>Competitive Analysis</b></h4>
-		  <p class="justified text-aria"> Along with the literature on different research projects, the team also looked at some of the different products available on the market. We even ordered a couple of devices (The Buzzclip, SUNU Band) to try out and give an additional opinion. </span> </p>
+		  <p class="justified text-aria"> The team looked at some of the different products available on the market. We even ordered a couple of devices (The Buzzclip, SUNU Band) to try out and give a different opinion. The competitive analysis gave us the strengths and weaknesses of the various products used by people who suffer from vision impairments. Trying out the devices gave an understanding of the features and functions. Trying out the products also helped inform the design process. User reviews helped us understand what the users think about the different products.</span> </p>
+		  <h2 class="header-aria">INSIGHTS</h2>
+			<ul class="listitems">
+				<li class="text-aria">Having tried BuzzClip, it is a portable device with a single sensor, but it is expensive. The BuzzClip may fall off the clip-on object and cause problems to the person using it.  . </li>
+				<li class="text-aria"> SUNU BAND has a high learnability curve and has an application that comes with it. </li>
+				<li class="text-aria">The minimum pricing is in the higher $200 range. Not many users go out of their comfort zone of using the white cane and buy specific devices.</li>
+				<li class="text-aria">Other devices were not tried but searched online. That can be considered a drawback in the competitive analysis because the researchers do not have the first-hand experience trying out the device.</li>
+			</ul>
 		  <figure>
 		  <img src="assets/img/Personal/CA.png" class="avatar8" alt="">
           <figcaption align="center"><i>BuzzClip, SUNU Band, and the WeWalk Smart Cane </i></figcaption>
 		  </figure>
-		  <h4 class="uppermargin"><b>User Interviews </b></h4>
-		  <p class="justified text-aria">We interviewed participants ranging from first time runners to seasoned marathon runners. The feedback was collected, analysed, coded for reference.</p>
-		  <blockquote> <i>It depends on how well you know the trail. I’ve gotten to the point where they just. Give me a really short warning. I’ll be OK because I’m prepping for it anyways. If that makes sense.</i></blockquote>
-		  <blockquote> <i>The DeafBlind cannot hear the bells as a location indicator. Again the SUNU band already does this and it was tested in a crowded race type environment</i></blockquote>
+		 
 		  
 		  <h4 class="uppermargin"><b>Scenario Development</b></h4>
-			<span class = "text-aria"> Multiple scenarios were developed over a period to ensure that major situations are covered and the prototype addresses them. </span></p>
+			<span class = "text-aria"> Multiple scenarios were developed over a period to ensure that major situations are covered and the prototype addresses them. We believe that by creating the scenarios, we could generate empathy for our user base (runners who are visually impaired) and design, and develop the most optimal solution. Scenarios also made us understand the key features of our device, where it may be used and also shed some light on the environmental condition that may hamper it's usage. </span></p>
 			<figure>
 			<img src="assets/img/Personal/Scenario.jpg" class="avatar4" alt="">
 			<figcaption align="center"> <i>A sample scenario </i></figcaption>
@@ -326,14 +330,21 @@
 	
 	<section id="evaluation">
       <div class="container" data-aos="fade-up">
-          <div>
-          <h2><b>USER FEEDBACK</b></h2>
-          </div>
-			  <blockquote> <i>If we can move on to kind of more specifics of how the device responds. So, if it's clear that we have awareness of the user you can get objects in front of you to the sides and behind you.</i></blockquote>
+           <h3 class="uppermargin"><b>Users Interviews to check for Feasibility</b></h3>
+		  <p class="justified text-aria">As a team, we want to develop a suitable device to fit our target audience. So we interviewed participants ranging from first-time runners to seasoned marathon runners about the prospective device as a concept interview based on the research. The feedback was collected, analyzed, coded for reference. We conducted the context interviews to inform the device's feature decisions based on the users' feedback.</p> 
+		  <blockquote> <i>It depends on how well you know the trail. I’ve gotten to the point where they just. Give me a really short warning. I’ll be OK because I’m prepping for it anyways. If that makes sense.</i></blockquote>
+		  <blockquote> <i>The DeafBlind cannot hear the bells as a location indicator. Again the SUNU band already does this and it was tested in a crowded race type environment</i></blockquote>
+		   <h2 class="header-aria">INSIGHTS</h2>
+			<ul class="listitems">
+				<li class="text-aria">The participants mentioned that if the weight is negligible while running, it would be ideal for them to dorn the device.  </li>
+				<li class="text-aria"> A single sensor would not cut it in environments where wide sensing would be required.</li>
+				<li class="text-aria">Participants have demonstrated that the device may not be used entirely for running. For instance, one participant voiced concern about using any device in a crowded marathon, while others mentioned the difficulty with information bombardment.</li>
+				<li class="text-aria">Participants mentioned that the device could come on its own and be useful in obstacle detection given the array of sensors and the varied sensing range.</li>
+			</ul>
+			<blockquote> <i>If we can move on to kind of more specifics of how the device responds. So, if it's clear that we have awareness of the user you can get objects in front of you to the sides and behind you.</i></blockquote>
 			  <blockquote> <i>Yeah, I guess my question is, how we find the vibration. Is it just going to drop off if you move to the left or right of the obstacle?</i></blockquote>
-			  <blockquote> <i>How heavy the pieces are and how bulky it is but I think that's something to definitely consider. Especially if it's a battery-operated.</i></blockquote>
-			  </div>
-			
+			  <blockquote> <i>How heavy the pieces are and how bulky it is but I think that's something to definitely consider. Especially if it's a battery-operated.</i></blockquote>			
+			</div>
     </section><!-- End Evaluation Details -->
 	
 	
