--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-12 d-flex justify-content-center" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li class ="hover" data-filter="*" class="filter-active">All</li>
               <li class ="hover"  data-filter=".filter-app">Accessibility</li>
@@ -81,8 +81,8 @@
         </div>
 		
     <div class="services">
-      <div class="container" data-aos="fade-up">
-		<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+      <div class="container">
+		<div class="row portfolio-container" data-aos-delay="200">
 
          
 
@@ -233,32 +233,46 @@
             	  
 		  <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>User Researcher - Shared Services Center, University of Maryland, Baltimore County  </h4>
+              <h4>User Researcher - Shared Services Center, University of Maryland </h4>
               <h5>2020 - Present</h5>
               <p><em>University of Maryland, Baltimore County </em></p>
               <ul>
-                <li>Drive all research related activities for the Shared Services Team of the University of Maryland, Baltimore County [CLIENT]. </li>
-                <li>Collect, analyze, and share qualitative and quantitative data through a mixed methods approach. Perform usability tests to evaluate the performance of the current product. Communicating the findings to the business team to help increase revenue. </li>
-                <li>Currently Engaged in extensive user research to define specific shortcomings, identifying stakeholder needs and aid the redesign to reduce bounce rates (Current- 60%, Projected 30-40%), help improve the page visits, and the overall usability.	</li>
+                <li>Lead mixed methods research initiatives on qualitative and quantitative data. </li>
+                <li>Performed heuristic evaluations on the Shared Services Center website to uncover usability problems related to content placement and navigation. </li>
+                <li>Improved search relevance and content discovery through the insights gained from usability testing. </li>
+				<li>Improved NPS from 30 to 50 by implementing contextual inquiry driven recommendations. </li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>GRADUATE RESEARCH ASSISTANT</h4>
+              <h4> RESEARCH ASSISTANT - <i> Toyota Funded Research on Mobility </i></h4>
               <h5>2019-2020</h5>
               <p><em>University of Maryland, Baltimore County</em></p>
               <ul>
-                <p>Investigated the navigational habits of individuals who are blind in low- and medium-income countries and drew insights from the various findings based on interviews to provide references for the design of future assistive technologies in the navigational space.</p>
+                <p>Research Assistant in a Toyota funded project to prototype a belt that aids legally blind runners.</p>
+				<p>Analyzed competitors, simulated scenarios, and created affinity maps to inform prototype design.  </p>
+				<p> Evaluated prototype feasibility with the help of a field experiment in an obstacle course followed by user interviews. </p>
               </ul>
             </div>
-			            <div class="resume-item">
+			
+			<div class="resume-item">
+              <h4> RESEARCH ASSISTANT</h4>
+              <h5>2019-2020</h5>
+              <p><em>University of Maryland, Baltimore County</em></p>
+              <ul>
+                <p>Investigated real world navigational habits of legally blind individuals in low- and medium-income countries.</p>
+				<p>Developed guidelines for future assistive technologies in the navigational space from context interviews and qualitative coding.</p>
+              </ul>
+            </div>
+			
+            <div class="resume-item">
               <h4>SOFTWARE ENGINEER (UI/UX)</h4>
               <h5>2017 - 2019</h5>
               <p><em> L & T Infotech - Bangalore, India</em></p>
 			  <br>
               <ul>
-                <li>Collaborated with multiple clients of L&T Infotech (Hartford Steam Boiler, Mercer) in a cross-functional setup with the working knowledge of Adobe Experience Manager (a web content management tool) and implemented front-end technologies (HTML, JavaScript, CSS, AJAX) to create a web-based insurance portal.</li>
-                <li>The portal enables users to perform quotation related operations and track the data over a period.  </li>
-                <li>Part of the team that conducted generative research on the product to find potential solutions and opportunities that can maximize revenue and profits. </li>
+                <li>Conducted generative research on customer insurance portals to determine product roadmap.</li>
+                <li>Managed websites by integrating front end web technologies using Adobe Experience Manager. </li>
+                <li>Developed a web portal for an insurance client of L \& T Infotech (HSB) to process quotations for customers across the globe. </li>
               </ul>
             </div>
           </div>
