--- a/mobileapp.html
+++ b/mobileapp.html
@@ -80,7 +80,8 @@
         <div class="section-title">
           <h2>Overview</h2>
           <p class="justified text-aria">
-		  As a diversion from my thesis, I decided to do a personal project to come up with an application for individuals who are blind when it comes to navigation and aid them in navigating from one place to another.
+		  According to the WHO website, globally, it is estimated that at least 2.2 billion people have a vision impairment or blindness, of whom at least 1 billion have a vision impairment that could have been prevented or has yet to be addressed. The number of individuals who are blind, using technology to assist them, are relatively few in numbers as compared to the total number. These technologies include mobile applications, smart walking sticks, voice assistants, and so on., This project looks at developing a mobile navigation application for individuals who are blind.
+		 
         </div>
 
         <div class="row">
@@ -98,13 +99,13 @@
 			</p>
 			<h3> Introduction</h3>
             <p class="justified">
-              According to the WHO website, globally, it is estimated that at least 2.2 billion people have a vision impairment or blindness, of whom at least 1 billion have a vision impairment that could have been prevented or has yet to be addressed. The number of individuals who are blind, using technology to assist them, are relatively few in numbers as compared to the total number. These technologies include mobile applications, smart walking sticks, voice assistants, and so on., This project looks at developing a mobile application for individuals who are blind and assist them with their navigation from one place to another.
+               As a diversion from my thesis, I decided to do a personal project to come up with an application for individuals who are blind when it comes to navigation and aid them in navigating from one place to another.
             </p>
           </div>
 		  <div class="container content">
-		  <h3>My Role</h3>
+		  <h3 class="uppermargin">My Role</h3>
 		  <p class="justified text-aria"> UX researcher and UX designer</p>
-		  ctions on Adobe XD. I emplyed generative research helped me understand the exisiting pain-points, the opportunities and the possible solutions for the prototype.
+		 .
 			  </div>
         </div>
       </div>
@@ -127,23 +128,22 @@
 	
      <!-- End Portfolio Details -->
 	
-	<section id="requirements">
       <div class="container" data-aos="fade-up">
 		  <div>
-          <h2 class="header-aria" id="requirements"><b>The Problem</b></h2>
+          <h2 class="header-aria"><b>The Problem</b></h2>
           </div>
 		  <p class="justified">
             <span class = "text-aria"> Given that individuals who are blind are so accustomed to the white cane, How can an application help in solving some of the overarching issues related to navigation that persist in their lives instead of them accessing different applications concurrently?</span> </p>
 		  </div> 
 	
-      <div class="container" data-aos="fade-up">
+      <div class="container uppermargin" data-aos="fade-up">
           <h2 class= "header-aria"><b>Assumptions</b></h2> 
 		  <p class="justified">
-            <span class = "introtext"> I made a bunch of assumptions before I began the research part of the project. I assumed that people have a smartphone at the very basic. I also assumed that they use their phone for navigation from one place to another. In addition to that, I also assumed that they have access to video. My last assumption was that they have used other mobile applications before related to navigation.</span> </p>
+            <span class = "text-aria"> I made a bunch of assumptions before I began the research part of the project. I assumed that people have a smartphone at the very basic. I also assumed that they use their phone for navigation from one place to another. In addition to that, I also assumed that they have access to video. My last assumption was that they have used other mobile applications before related to navigation.</span> </p>
 		</div>
 
       <div class="container" data-aos="fade-up">
-          <h2><b>Some Basic Questions</b></h2> 
+          <h2 class="header-aria uppermargin"><b>Some Basic Questions</b></h2> 
 		  
 		<h5 class = "userbasecolor"><b>Who are the users? </b></h5>
 		<p class="justified"> <span class = "text-aria"> Individuals with vision loss, capable of using a mobile phone. </span> </p>	
@@ -154,7 +154,7 @@
     </div>
 	
 
-	<div>
+	<div class ="container uppermargin" data-aos="fade-up">
           <h2 class="header-aria">Recruitment</h2>
 		  <p class="text-aria">I recruited participants by reaching out to a charity run blind school. using the <span class="irqhighlight"> snowball sampling technique. </span> </p>
 		  <span class="text-aria">
@@ -170,7 +170,6 @@
 			<p class="tabspacing"><b>Devices:</b> Mobile (Android and IOS)</p></span>
           </div>
 		  </div>
-	</section>
 
 	<section id="methods">
       <div class="container" data-aos="fade-up">
@@ -178,11 +177,11 @@
 		  <p class="justified">
             <span class = "text-aria"> Short study involving generative research to get the pain-points and preferences of individuals using navigation applications. Conducting user research gave me an idea on how the design should be to yield maximum results.</p>
 			<ul class="text-aria">
-			<li>Thorough research on the applications in use by the individuals who are blind - UXR</li> 
-            <li>Semi Structured Context Interviews with 14 participants from a charity run blind school - UXR </li>
-            <li>Field Studies, observing technology use of the users in their natural element - UXR </li>
-            <li>Collecting insights, Persona, Empathy mapping and Storyboard creation from the qualitative data obtained - UXR </li>
-			<li>Prototype Creation, design, and evaluation - UXD </li>
+			<li>Thorough research on the applications in use by the individuals who are blind</li> 
+            <li>Semi Structured Context Interviews with 14 participants from a charity run blind school</li>
+            <li>Field Studies, observing technology use of the users in their natural element</li>
+            <li>Collecting insights, Persona, Empathy mapping and Storyboard creation from the qualitative data obtained</li>
+			<li>Prototype Creation, design, and evaluation</li>
 			</ul>
 		  
 			<h4 class="uppermargin"><b>Product Analysis</b></h4>
@@ -237,7 +236,7 @@
 		
 			<h4 class="uppermargin"><b>Affinity Mapping</b></h4>
 			<p class="justified">
-            <span class = "introtext"> Having obtained the data, I am now looking at drawing themes and prioritizing them.</span> </p>
+            <span class = "text-aria"> Having obtained the data, I am now looking at drawing themes and prioritizing them.</span> </p>
 			<p class="justified">
             <span class = "text-aria"> The Affinity diagram helped me structure my thoughts and organize the content.</span> </p>
 			<img src="assets/img/Personal/Affinitydiagram2.png" class="avatar7" alt="">
@@ -264,8 +263,8 @@
 		
 	 <section id="insights3">
       <div class="container" data-aos="fade-up">
-          <h2><b>❗ Importance of Progressive Disclosure</b></h2>
-		<p class="text-aria justified"><span class="introtext">I am extremely mindful to employ progressive disclosure. Given that we are dealing with individuals who are blind, we really cannot push too much information on a single screen. The content has to be relatively easy to identify and understand. Progressive Disclosure would allow me to push all the information that was not necessary to screens at the back that would only appear when needed. (Based on the functionalities presented to the user.) </span></p>
+          <h2 class="header-aria"><b>❗ Importance of Progressive Disclosure</b></h2>
+		<p class="text-aria justified">I am extremely mindful to employ progressive disclosure. Given that we are dealing with individuals who are blind, we really cannot push too much information on a single screen. The content has to be relatively easy to identify and understand. Progressive Disclosure would allow me to push all the information that was not necessary to screens at the back that would only appear when needed. (Based on the functionalities presented to the user.) </p>
 	  </div>
     </section>
 	
@@ -275,7 +274,7 @@
           <h2><b>Design</b></h2>
           </div>
 		  <p class="justified">
-            <span class = "introtext"> Starting with the <span class="irqhighlight"><b> Pen and Paper Sketches </b> </span> for low fidelity, <span class="irqhighlight"> <b> Balsamiq Mockups </b> </span> for medium fidelity, and <span class="irqhighlight"> <b> Adobe XD </b></span> for high fidelity mockups, I went in stages.</p>
+            <span class = "text-aria"> Starting with the <span class="irqhighlight"><b> Pen and Paper Sketches </b> </span> for low fidelity, <span class="irqhighlight"> <b> Balsamiq Mockups </b> </span> for medium fidelity, and <span class="irqhighlight"> <b> Adobe XD </b></span> for high fidelity mockups, I went in stages.</p>
 			<h4 class><b>Pen - Paper Sketches</b></h4>
 			<div class="row">
 			<div class ="col-md-6">
@@ -283,13 +282,13 @@
 			</div>
 		<div class ="col-md-6">
 		<p class="justified">
-            <span class = "researchtext"> I love to put my thoughts on paper so I decided to go ahead with the pen-paper route. Anything that comes to my mind has to hit the white sheet first.</span> </p>
+            <span class = "text-aria"> I love to put my thoughts on paper so I decided to go ahead with the pen-paper route. Anything that comes to my mind has to hit the white sheet first.</span> </p>
 		</div>
 		</div>
 		
 		<h4 class="uppermargin"><b>Wireframing</b></h4>
 		<p class="justified">
-            <span class = "introtext"> I used Balsamiq Mockups to generate the wireframes of the skeletal structure of the application. Balsamiq Mockups is a great tool with a low learnability curve and relative ease of use.</span> </p>
+            <span class = "text-aria"> I used Balsamiq Mockups to generate the wireframes of the skeletal structure of the application. Balsamiq Mockups is a great tool with a low learnability curve and relative ease of use.</span> </p>
 			<h6 style="color:blue;"><b>Main Screen</b></h6>
 			<div class="row">
 			<div class ="col-md-4">
@@ -297,7 +296,7 @@
 			</div>
 		<div class ="col-md-8">
 		<p class="justified">
-         <span class = "researchtext"> This is the main page and is a key component in the application. It has 3 pivotal functions </p> <h5> <span class ="irqhighlight"> Ask for Assistance </span>, <span class="irqhighlight"> Connect to Maps </span> , <span class ="irqhighlight"> Video Assistance</span> </span></h5>
+         <span class = "text-aria"> This is the main page and is a key component in the application. It has 3 pivotal functions </p> <h5> <span class ="text-aria irqhighlight"> Ask for Assistance </span>, <span class="text-aria irqhighlight"> Connect to Maps </span> , <span class =" text-aria irqhighlight"> Video Assistance</span> </span></h5>
 		</div>
 		</div>
 		<h6 class="uppermargin" style="color:blue;"><b>Function Screens #1</b></h6>
@@ -307,10 +306,10 @@
 		<div class="background">
 		<h4 class="uppermargin"><b>Prototype</b></h4>
 		<p class="justified">
-            <span class = "introtext"> <b> Adobe XD </b> was the tool used and I also used <span class="irqhighlight">voice feature </span> given by the tool to do the same.</span> </p>
+            <span class = "text-aria"> <b> Adobe XD </b> was the tool used and I also used <span class="irqhighlight">voice feature </span> given by the tool to do the same.</span> </p>
 			<img src="assets/img/Personal/MockupFinal.png" class="avatar4" alt="">
 		</div>
-		<p class ="introtext"> To take a look at the prototype, click <a href="https://xd.adobe.com/view/003e47c3-2a70-47ce-a40c-7989f1c48a88-556d/"> Here </a> </p>
+		<p class ="text-aria"> To take a look at the prototype, click <a href="https://xd.adobe.com/view/003e47c3-2a70-47ce-a40c-7989f1c48a88-556d/"> Here </a> </p>
 		</section>
 		
 		<section>
@@ -337,7 +336,7 @@
 		<section id="insights2">
       <div class="container" data-aos="fade-up">
           <h2><b>Takeaways</b></h2>
-		<p class="text-aria justified"><span class="introtext">From trying to empathize with the blind community to putting all my might behind making a prototype that is accessible to them, I have come a long way. I feel that the project has made me a stronger person mentally. I was skeptical at the beginning of the project, but as time progressed, the belief instilled in me by the community made me realize how we are gifted to have everything at our disposal and use it with so much ease. Along the way, I faced innumerable challenges. Everyone I spoke to had an opinion and a design idea. I went with my instincts, tried being in the shoes of a blind person, empathizing with them. This helped me understand and develop a novel idea for the application. I went with the idea that connecting people on the app is similar to what happens in rideshare, and I hope that one day, even if my prototype does not hit the market, it stands as an inspiration for many designs to come.  </span></p>
+		<p class="text-aria justified"><span class="text-aria">From trying to empathize with the blind community to putting all my might behind making a prototype that is accessible to them, I have come a long way. I feel that the project has made me a stronger person mentally. I was skeptical at the beginning of the project, but as time progressed, the belief instilled in me by the community made me realize how we are gifted to have everything at our disposal and use it with so much ease. Along the way, I faced innumerable challenges. Everyone I spoke to had an opinion and a design idea. I went with my instincts, tried being in the shoes of a blind person, empathizing with them. This helped me understand and develop a novel idea for the application. I went with the idea that connecting people on the app is similar to what happens in rideshare, and I hope that one day, even if my prototype does not hit the market, it stands as an inspiration for many designs to come.  </span></p>
 	  </div>
     </section>
   </main><!-- End #main -->
